--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "@types/react-dom": "^18.2.6",
     "@types/react-redux": "^7.1.27",
     "@types/swiper": "^6.0.0",
+    "axios": "^1.6.2",
     "craco": "^0.0.3",
     "gh-pages": "^6.0.0",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
-    "redux": "^4.2.1",
     "sass": "^1.63.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
